[package]
name = "cryptolab-backend"
version = "0.1.0"
authors = ["yktseng <tanistseng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["compression", "tls"] }
mongodb = "2.0.0-alpha	"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4.0"
env_logger = "0.8.3"
chrono = "0.4"
lazy_static = "1.4.0"